tests/src/frontend/typechecking/invalid/const_pattern1.sk
const My_bool: Bool = true;

fun shouldFail(x: Int): String {
  x match {
  | My_bool -> "I should fail"
  | 1 -> "You shouldn't be seeing this"
  }
}
